[project]
name = "easy-llama"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.12",
    "langchain[anthropic]>=0.3.24",
    "langgraph>=0.3.34",
    "pandas>=2.2.3",
    "streamlit>=1.44.1",
    "uvicorn>=0.34.2",
]
